more tries to make Jasperreports work